--- a/packages/jupyterlab-fonts/style/editor.css
+++ b/packages/jupyterlab-fonts/style/editor.css
@@ -8,6 +8,19 @@
   margin: 0;
 }
 
+.jp-FontsEditor-field {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.jp-FontsEditor-field a {
+  display: block;
+  flex: 1;
+  text-align: right;
+  font-size: 80%;
+}
+
 .jp-FontsEditor select {
   border: none;
   background: transparent;
