work on testing licenses

--- a/packages/jupyterlab-fonts/style/license.css
+++ b/packages/jupyterlab-fonts/style/license.css
@@ -1,3 +1,8 @@
+.jp-LicenseIcon {
+  background-image: url(copyright.svg);
+  background-size: contain;
+}
+
 .jp-LicenseViewer-wrapper {
   display: flex;
   flex-direction: column;
