--- a/packages/jupyterlab-fonts/style/license.css
+++ b/packages/jupyterlab-fonts/style/license.css
@@ -13,12 +13,17 @@
   display: flex;
   flex-direction: column;
   padding: var(--jp-notebook-padding);
+  color: var(--jp-ui-font-color0);
 }
 
 .jp-LicenseViewer h1,
 .jp-LicenseViewer h2 {
   flex: 0;
   margin: var(--jp-notebook-padding) 0;
+}
+
+.jp-LicenseViewer h2 {
+  color: var(--jp-ui-font-color1);
 }
 
 .jp-LicenseViewer pre {
