add more ceremony around rights

--- a/packages/jupyterlab-fonts/style/license.css
+++ b/packages/jupyterlab-fonts/style/license.css
@@ -1,5 +1,5 @@
 .jp-LicenseIcon {
-  background-image: url(copyright.svg);
+  background-image: url(./icons/copyright.svg);
   background-size: contain;
 }
 
