--- a/packages/jupyterlab-fonts/style/editor.css
+++ b/packages/jupyterlab-fonts/style/editor.css
@@ -1,11 +1,40 @@
 .jp-FontsEditor {
   color: var(--jp-ui-font-color0);
   overflow-y: auto;
+  background-color: var(--jp-layout-color1);
+}
+
+.jp-FontsEditor-button.jp-mod-styled {
+  font-size: var(--jp-ui-font-size1);
+  background-color: var(--jp-layout-color0);
+  border: solid 1px transparent;
+  white-space: nowrap;
+  flex: 0;
+}
+
+.jp-FontsEditor-button.jp-mod-styled:focus,
+.jp-FontsEditor-button.jp-mod-styled:hover {
+  border-color: var(--jp-border-color1);
 }
 
 .jp-FontsEditor h2 {
   padding: calc(1.6 * var(--jp-notebook-padding));
   margin: 0;
+}
+
+.jp-FontsEditor-delete-icon:hover,
+.jp-FontsEditor-delete-icon:focus {
+  background-image: url(./icons/delete-forever.svg);
+}
+
+.jp-FontsEditor-delete-icon {
+  background-image: url(./icons/delete-outline.svg);
+}
+
+.jp-FontsEditor-delete-icon.jp-FontsEditor-button.jp-mod-styled {
+  background-repeat: no-repeat;
+  background-position: center;
+  color: transparent;
 }
 
 .jp-FontsEditor h2 .jp-NotebookIcon {
@@ -16,20 +45,37 @@
   background-repeat: no-repeat;
 }
 
-.jp-FontsEditor-field {
-  display: flex;
-  margin: calc(1.6 * var(--jp-notebook-padding));
-  margin-bottom: 0;
-  align-items: baseline;
+.jp-FontsEditor-embed {
+  padding: 0 calc(1.6 * var(--jp-notebook-padding));
+  margin: 0;
 }
 
-.jp-FontsEditor-field .jp-Toolbar-item.jp-Toolbar-button {
-  width: auto;
-  height: auto;
-  font-size: 80%;
-  line-height: 1.25;
-  padding: 0.5em 1em;
-  background-color: var(--jp-layout-color2);
+.jp-FontsEditor-embed li {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.jp-FontsEditor-embed li > * {
+  flex: 1;
+  font-size: var(--jp-ui-font-size1);
+}
+
+.jp-FontsEditor-embed li > .jp-FontsEditor-size {
+  flex: 0;
+  padding: 0 var(--jp-ui-font-size1);
+  font-size: var(--jp-ui-font-size0);
+  color: var(--jp-ui-font-color2);
+  white-space: nowrap;
+}
+
+.jp-FontsEditor-field {
+  display: flex;
+  margin: var(--jp-notebook-padding);
+  margin-bottom: 0;
+  align-items: baseline;
 }
 
 .jp-FontsEditor-field label {
@@ -41,7 +87,8 @@
 .jp-FontsEditor-field > div {
   display: flex;
   flex: 1;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: baseline;
 }
 .jp-FontsEditor-field > div * {
   display: block;
