[wip] Adds support for JupyterLab 2.x (#19)
* back to compiling

* more work on files for debugging

* fix another version

* more version work

* remove lumino deps altogether

* strict null checking

* try some more version work

* try some other install stuff

* try more version things

* back to peering

* add custom build scripts for now

* fix missing lumino prefix

* fix more lumino prefixes

* global editor passing again

* clobber some old console.logs

* linting, all tests pass

* fix license viewing

* add an alpha tag, changelog

* work on icons

* clean up icons in test

--- a/packages/jupyterlab-fonts/style/editor.css
+++ b/packages/jupyterlab-fonts/style/editor.css
@@ -12,7 +12,7 @@
   flex: 0;
 }
 
-.jp-FontsEditor .p-CommandPalette-header {
+.jp-FontsEditor .lm-CommandPalette-header {
   margin: 0;
 }
 
@@ -37,15 +37,6 @@
 
 .jp-FontsEditor h2 > label {
   flex: 1;
-}
-
-.jp-FontsEditor-delete-icon:hover,
-.jp-FontsEditor-delete-icon:focus {
-  background-image: url(./icons/delete-forever.svg);
-}
-
-.jp-FontsEditor-delete-icon {
-  background-image: url(./icons/delete-outline.svg);
 }
 
 .jp-FontsEditor-delete-icon.jp-FontsEditor-button.jp-mod-styled {
